Can't seem to restrict iOS from zooming out, stackoverflow says usual methods no longer supported. So we just made the background video much wider to make it look better when zoomed out on iOS. Note only effects iOS not andriod.

--- a/src/hamburgerMenu.css
+++ b/src/hamburgerMenu.css
@@ -38,7 +38,8 @@ body {
     text-transform: uppercase;
     background-color: black;
     z-index: 12;
-    width: 100%;
+    width: 100vw;
+    border: 10px solid orange;
 }
 
 .close {
@@ -68,7 +69,7 @@ body {
     transition: 0.5s;
     z-index: 20;
     /* CHANGED */
-
+    border: 10px solid orange;
 
 }
 
@@ -81,7 +82,7 @@ body {
     padding-top: 50px;
     margin-top: 5%;
     text-transform: uppercase;
-
+    border: 10px solid orange;
 }
 
 .overlay-content a {
@@ -93,6 +94,7 @@ body {
     text-decoration: none;
     transition: 0.3s;
     position: relative;
+    border: 10px solid orange;
 }
 
 .overlay-content a:after {
